--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,69 @@
-.App {
-  text-align: center;
+.app {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	color: white;
+	margin: 0%;
+	padding: 0%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.stepper {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	border-top-right-radius: 10px;
+	border-top-left-radius: 10px;
+	color: gray;
+	background-color: thistle;
+	min-width: 80%;
+	max-width: 80%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.step {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: calc(33.33% - 10px);
+	padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.step:nth-child(1) {
+	border-top-left-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.current-step {
+	background-color: #1ec3cf;
+	color: white;
+}
+
+.rounded-border {
+	border-bottom-right-radius: 25px;
+	border-top-right-radius: 25px;
+}
+
+.rounded-border:nth-child(3) {
+	border-bottom-right-radius: 00px;
+	border-top-right-radius: 10px;
+}
+
+.rounded-step-number {
+	margin-right: 10px;
+	padding: 5px;
+}
+
+.app .form-container {
+	min-width: 80%;
+	max-width: 80%;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	background-color: white;
+	box-shadow: 0 6px 8px -4px gray;
+}
+
+.buttons {
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 30px;
+	min-width: 80%;
+	max-width: 80%;
 }
